# wasm-compat

./: .gitignore  Cargo.toml
src/: cell.rs  futures.rs  lib.rs  local.rs  once.rs  static_init.rs  sync.rs  time.rs
