[package]
name = "wasm-compat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paste = { version = "1.0.15", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console", "Window", "Document"] }
wasm-bindgen-futures = { version = "0.4.37", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [
    "rt",
    "time",
], default-features = false, optional = true }


[features]
futures = ["tokio", "wasm-bindgen-futures"]
static-init = []
time = []
sync = []
once = []
cell = ["paste"]
all = ["futures", "static-init", "time", "once", "sync", "cell"]
